# mesh

./: .gitignore  Cargo.toml  README  README.md
src/: lib.rs  main.rs  mesh.rs  utils.rs
src/data_structure/: base.rs  half_edge.rs  mod.rs
src/mesh_operation/: denoise.rs  mod.rs  noise.rs  remesh.rs  simplify.rs  subdivide.rs
