[package]
name = "mesh"
version = "0.1.0"
authors = ["rgreenblatt <greenblattryan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { git = "https://github.com/clap-rs/clap" }
tobj = "0.1"
nalgebra = "0.19"
ordered-float = "1.0"
