[package]
name = "mesh"
version = "0.1.0"
authors = ["rgreenblatt <greenblattryan@gmail.com>"]
edition = "2018"

[profile.release]
debug = true

[dependencies]
tobj = "0.1"
nalgebra = "0.19"
ordered-float = "1.0"
rand_distr = "0.2"
rand = "0.7"

[dependencies.clap]
git = "https://github.com/clap-rs/clap"
version = "3.0.0-beta.1"
default-features = false
features = ["derive", "color", "std"]
